[package]
name = "gong"
version = "1.4.2"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jnqnfe/gong"
repository = "https://github.com/jnqnfe/gong"
description = """
A lightweight, flexible and simple-to-use command line argument parser.
"""
keywords = ["gong", "getopt", "terminal", "command-line"]

[dependencies]
strsim = { version = "0.8", optional = true }

[features]
default = ["suggestions"]
# Enables the suggestion feature for use with unrecognised longoption situations
suggestions = ["strsim"]
