[package]
name = "gong"
version = "1.4.1"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jnqnfe/gong"
repository = "https://github.com/jnqnfe/gong"
description = """
A lightweight, flexible and simple-to-use command line argument processor.
"""
keywords = ["gong", "getopt", "terminal", "command-line"]

[dependencies]

[badges]
travis-ci = { repository = "jnqnfe/gong" }
